force-app/main/default/objects/TutorialEntry__c/TutorialEntry__c.object-meta.xml
<CustomObject>
    <label>TutorialEntry</label>
    <nameField>
        <label>TutorialEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TutorialEntry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>