force-app/main/default/objects/TutorialEntry__c/fields/DocType__c.field-meta.xml
<CustomField>
    <fullName>DocType__c</fullName>
    <label>DocType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vidéo</fullName>
            </value>
            <value>
                <fullName>Powerpoint file</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>