force-app/main/default/objects/TutorialEntry__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <formula>IMAGE(LEFT($Api.Partner_Server_URL_370, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_370))+&quot;resource/SLDS/assets/icons/standard-sprite/svg/symbols.svg#&quot; &amp;  TEXT(Type__c) , TEXT(Type__c) , 25, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>