force-app/main/default/objects/TutorialEntry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Defines the icon that will be displayed next to the title</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>drafts</fullName>
                <default>true</default>
                <label>Drafts</label>
            </value>
            <value>
                <fullName>record</fullName>
                <label>Record</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>